--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
     width: 1440px;
     height: 1024px;
     background-color: #FFF;
-    background-image: url(/img/whiteblur.png), url(/img/pinkblur.png), url(/img/blueblur.png), url(/img/yellowblur.png), url(/img/blueblur2.png);
+    background-image: url(/img/whiteblur.png), url(/img/pinkblur.png), url(/img/blueblur.png), url(./img/yellowblur.png), url(master/img/blueblur2.png);
     background-position: left, left, right, right, left, left;
     background-position-y: center, top, top, bottom, bottom, center;
     background-repeat: no-repeat;
